# wit-bindgen-http-example

http-rust-consumer/: Cargo.toml  bindings.rs
http-rust-consumer/src/: main.rs
httpexp/: Cargo.toml  bindings.rs
httpexp/src/: lib.rs
