[package]
name = "http-rust-consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "32e63116d469d8046727fae3c1333a7d35d0c5d3" }
		wasmtime = "0.31.0"
		wasmtime-wasi = "0.31.0"
		anyhow = "1.0.51" 
		httpexp = { path = "../httpexp"}